Make sure spaces  in file paths are properly escaped. Resolves #523.